Design overflow fixes

--- a/css/pages/article/scss/article.scss
+++ b/css/pages/article/scss/article.scss
@@ -648,6 +648,9 @@ body {
                             }
                             .content {
                                 padding: 20px;
+                                .sub-insurance {
+                                    grid-template-columns: 1fr 1fr 1fr;
+                                }
                             }
                         }
                     }
