--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -323,6 +323,9 @@ body {
     body {
         grid-template-columns: 1fr;
         grid-template-areas: 'header' 'main' 'article' 'footer';
+        .ad-container {
+            overflow: hidden;
+        }
         header {
             padding: 30px 0;
             height: 100vh;
